Added CosturaFody Dependency to weave any other requirements into binary.

--- a/UDPClientSocket/UDPClientSocket.csproj
+++ b/UDPClientSocket/UDPClientSocket.csproj
@@ -19,4 +19,11 @@
     <WarningLevel>5</WarningLevel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Costura.Fody" Version="5.8.0-alpha0098">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
